[tool.poetry]
name = "string-based-game"
version = "0.1.4"
description = ""
authors = ["Brandon Bailey <Brandon.bailey3@student.nisdtx.org>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^2.0.0"
playsound = "^1.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
